Add and integrate React

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -78,8 +78,17 @@
                 "unlinkedCollapsed": true
               }
             }
+          },
+          {
+            "id": "bb54ae94446bf1ab",
+            "type": "leaf",
+            "state": {
+              "type": "collection-manager",
+              "state": {}
+            }
           }
-        ]
+        ],
+        "currentTab": 1
       }
     ],
     "direction": "horizontal",
