--- a/.obsidian/plugins/litmojo-plugin/tsconfig.json
+++ b/.obsidian/plugins/litmojo-plugin/tsconfig.json
@@ -15,9 +15,10 @@
       "ES5",
       "ES6",
       "ES7"
-    ]
+    ],
+    "jsx": "react"
   },
   "include": [
     "**/*.ts"
-  ]
+, "CollectionManagerView.tsx"  ]
 }
