--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,8 +7,11 @@
         "id": "a36b895d410c1f03",
         "type": "leaf",
         "state": {
-          "type": "empty",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Development/Dev Log/2022-05-03 Dev Log.md",
+            "mode": "source"
+          }
         }
       }
     ],
@@ -65,6 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Development/Dev Log/2022-05-03 Dev Log.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -76,7 +80,7 @@
             }
           },
           {
-            "id": "c50b148ea750bf9e",
+            "id": "94563e2e1a38411f",
             "type": "leaf",
             "state": {
               "type": "collection-manager",
@@ -92,15 +96,15 @@
   },
   "active": "a36b895d410c1f03",
   "lastOpenFiles": [
+    "Development/Dev Log/2022-05-03 Dev Log.md",
+    "Development/Dev Log/2022-04-22 Dev Log.md",
+    "Development/Dev Log/2022-04-23 Dev Log.md",
+    "Development/Dev Log/2022-04-27 Dev Log.md",
+    "Development/Dev Log/2022-04-28 Dev Log.md",
     "Requirements and Design/Specifications.md",
     "Requirements and Design/Features/Manage Document Notes/Manage Document Notes.md",
     "Requirements and Design/Features/Manage and Compile Collections/Manage and Compile Collections.md",
     "Development/Development.md",
-    "Development/Dev Log/2022-04-28 Dev Log.md",
-    "Development/Dev Log/2022-04-23 Dev Log.md",
-    "Development/Dev Log/2022-04-27 Dev Log.md",
-    "Development/Dev Log/2022-04-22 Dev Log.md",
-    "README.md",
-    "Requirements and Design/Glossary of Acronyms and Terms.md"
+    "README.md"
   ]
 }
