--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Development/Dev Log/2022-05-03 Dev Log.md",
+            "file": "Development/Dev Log/2022-05-04 Dev Log.md",
             "mode": "source"
           }
         }
@@ -52,7 +52,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 368.01219177246094
+    "width": 371.0007801055908
   },
   "right": {
     "id": "9e3b907cb93400c0",
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Development/Dev Log/2022-05-03 Dev Log.md",
+                "file": "Development/Dev Log/2022-05-04 Dev Log.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -96,6 +96,7 @@
   },
   "active": "a36b895d410c1f03",
   "lastOpenFiles": [
+    "Development/Dev Log/2022-05-04 Dev Log.md",
     "Development/Dev Log/2022-05-03 Dev Log.md",
     "Development/Dev Log/2022-04-22 Dev Log.md",
     "Development/Dev Log/2022-04-23 Dev Log.md",
@@ -104,7 +105,6 @@
     "Requirements and Design/Specifications.md",
     "Requirements and Design/Features/Manage Document Notes/Manage Document Notes.md",
     "Requirements and Design/Features/Manage and Compile Collections/Manage and Compile Collections.md",
-    "Development/Development.md",
-    "README.md"
+    "Development/Development.md"
   ]
 }
