--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Development/Dev Log/2022-05-04 Dev Log.md",
+            "file": "Development/Dev Log/2022-05-05 Dev Log.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Development/Dev Log/2022-05-04 Dev Log.md",
+                "file": "Development/Dev Log/2022-05-05 Dev Log.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,25 +86,35 @@
               "type": "collection-manager",
               "state": {}
             }
+          },
+          {
+            "id": "243066d79525adec",
+            "type": "leaf",
+            "state": {
+              "type": "outline",
+              "state": {
+                "file": "Development/Dev Log/2022-05-05 Dev Log.md"
+              }
+            }
           }
         ],
-        "currentTab": 1
+        "currentTab": 2
       }
     ],
     "direction": "horizontal",
-    "width": 385.6158142089844
+    "width": 697.3402099609375
   },
   "active": "a36b895d410c1f03",
   "lastOpenFiles": [
+    "Development/Dev Log/2022-05-05 Dev Log.md",
+    "Development/Dev Log/2022-04-28 Dev Log.md",
+    "Development/Dev Log/2022-04-27 Dev Log.md",
+    "Requirements and Design/Technical Design Decisions.md",
+    "Development/Dev Log/2022-04-23 Dev Log.md",
+    "Development/Dev Log/2022-04-22 Dev Log.md",
     "Development/Dev Log/2022-05-04 Dev Log.md",
     "Development/Dev Log/2022-05-03 Dev Log.md",
-    "Development/Dev Log/2022-04-22 Dev Log.md",
-    "Development/Dev Log/2022-04-23 Dev Log.md",
-    "Development/Dev Log/2022-04-27 Dev Log.md",
-    "Development/Dev Log/2022-04-28 Dev Log.md",
     "Requirements and Design/Specifications.md",
-    "Requirements and Design/Features/Manage Document Notes/Manage Document Notes.md",
-    "Requirements and Design/Features/Manage and Compile Collections/Manage and Compile Collections.md",
-    "Development/Development.md"
+    "Requirements and Design/Features/Manage Document Notes/Manage Document Notes.md"
   ]
 }
