--- a/.obsidian/plugins/litmojo-plugin/package.json
+++ b/.obsidian/plugins/litmojo-plugin/package.json
@@ -18,9 +18,8 @@
 		"builtin-modules": "^3.2.0",
 		"esbuild": "0.13.12",
 		"obsidian": "latest",
+		"obsidian-dataview": "^0.5.47",
 		"tslib": "2.3.1",
 		"typescript": "4.4.4"
-	},
-	"dependencies": {
 	}
 }
