--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Documentation/Developer Log/2022-10-11.md",
+            "file": "Documentation/Developer Log/2022-10-12.md",
             "mode": "source",
             "source": false
           }
@@ -53,7 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 309.5
+    "width": 275
   },
   "right": {
     "id": "9e3b907cb93400c0",
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Documentation/Developer Log/2022-10-11.md",
+                "file": "Documentation/Developer Log/2022-10-12.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -86,7 +86,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Documentation/Developer Log/2022-10-11.md"
+                "file": "Documentation/Developer Log/2022-10-12.md"
               }
             }
           }
@@ -95,19 +95,19 @@
       }
     ],
     "direction": "horizontal",
-    "width": 407.5
+    "width": 447
   },
   "active": "4e99345049c38266",
   "lastOpenFiles": [
+    "TestContent/Frankenstein/FULL LICENSE.md",
+    "TestContent/Frankenstein/END.md",
+    "TestContent/Frankenstein/Letter 4.md",
+    "TestContent/Frankenstein/Letter 3.md",
+    "TestContent/Frankenstein/Letter 2.md",
+    "TestContent/Frankenstein/Letter 1.md",
     "TestContent/Frankenstein/Chapter 1.md",
-    "TestContent/Frankenstein/Chapter 4.md",
-    "TestContent/Frankenstein/Chapter 3.md",
-    "TestContent/Frankenstein/Chapter 2.md",
-    "Documentation/To Do.md",
-    "Documentation/Developer Log/2022-10-11.md",
-    "Documentation/Documentation.md",
-    "Documentation/Developer Log/2022-10-10.md",
-    "Documentation/Required Plugins.md",
-    "Documentation/Obsidian Icons.md"
+    "TestContent/Frankenstein/BEGIN.md",
+    "TestContent/Frankenstein/Chapter 24.md",
+    "TestContent/Frankenstein/Chapter 23.md"
   ]
 }
