--- a/.obsidian/plugins/litmojo-plugin/package.json
+++ b/.obsidian/plugins/litmojo-plugin/package.json
@@ -21,5 +21,8 @@
 		"obsidian-dataview": "^0.5.47",
 		"tslib": "2.3.1",
 		"typescript": "4.4.4"
+	},
+	"dependencies": {
+		"@shoelace-style/shoelace": "^2.0.0-beta.83"
 	}
 }
