--- a/.obsidian/plugins/litmojo-plugin/package.json
+++ b/.obsidian/plugins/litmojo-plugin/package.json
@@ -23,6 +23,12 @@
 		"typescript": "4.4.4"
 	},
 	"dependencies": {
-		"@shoelace-style/shoelace": "^2.0.0-beta.83"
+		"@shoelace-style/shoelace": "^2.0.0-beta.83",
+		"remark-frontmatter": "^4.0.1",
+		"remark-parse": "^10.0.1",
+		"remark-rehype": "^10.1.0",
+		"remark-stringify": "^10.0.2",
+		"unified": "^10.1.2",
+		"unist-util-visit": "^4.1.1"
 	}
 }
