--- a/.obsidian/plugins/litmojo-plugin/package.json
+++ b/.obsidian/plugins/litmojo-plugin/package.json
@@ -23,7 +23,7 @@
 		"typescript": "4.4.4"
 	},
 	"dependencies": {
-		"@shoelace-style/shoelace": "^2.0.0-beta.83",
+		"rehype-stringify": "^9.0.3",
 		"remark-frontmatter": "^4.0.1",
 		"remark-parse": "^10.0.1",
 		"remark-rehype": "^10.1.0",
