--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -5,5 +5,6 @@
   "newFileLocation": "current",
   "attachmentFolderPath": "./",
   "livePreview": true,
-  "showUnsupportedFiles": true
+  "showUnsupportedFiles": true,
+  "showInlineTitle": false
 }
