--- a/.obsidian/plugins/litmojo-plugin/package.json
+++ b/.obsidian/plugins/litmojo-plugin/package.json
@@ -23,8 +23,12 @@
 		"typescript": "4.4.4"
 	},
 	"dependencies": {
+		"mdast-util-to-hast": "^12.2.4",
+		"rehype-document": "^6.1.0",
 		"rehype-stringify": "^9.0.3",
 		"remark-frontmatter": "^4.0.1",
+		"remark-parse": "^10.0.1",
+		"remark-rehype": "^10.1.0",
 		"remark-stringify": "^10.0.2",
 		"unified": "^10.1.2",
 		"unist-util-visit": "^4.1.1"
