--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
-Compiled Manuscripts/*
+TestVault/Compiled Manuscripts/*
+!TestVault/Compiled Manuscripts/About.md
 
-!Compiled Manuscripts/About.md
+# vscode
+.vscode 
+
+# Intellij
+*.iml
+.idea
+
+# npm
+node_modules
+
+# Don't include the compiled main.js file in the repo.
+# They should be uploaded to GitHub releases instead.
+main.js
+
+# Exclude sourcemaps
+*.map
+
+# obsidian
+data.json
+
+# Exclude macOS Finder (System Explorer) View States
+.DS_Store
