--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,10 @@
 	"id": "litmojo",
 	"name": "LitMojo",
 	"version": "0.0.5",
-	"minAppVersion": "0.15.9",
+	"minAppVersion": "1.1.1",
 	"description": "Great tools for writing and publishing.",
 	"author": "Cody Burleson",
-	"authorUrl": "https://publish.obsidian.md/litmojo/LitMojo/README",
-	"isDesktopOnly": true
+	"authorUrl": "https://github.com/codyburleson/litmojo",
+	"isDesktopOnly": true,
+	"fundingUrl": "https://www.buymeacoffee.com/cburleson"
 }
