Read foldernote frontmatter values into settings

--- a/TestVault/.obsidian/plugins/litmojo-plugin/tsconfig.json
+++ b/TestVault/.obsidian/plugins/litmojo-plugin/tsconfig.json
@@ -19,5 +19,5 @@
   },
   "include": [
     "**/*.ts"
-, "manuscript-settings-view.ts"  ]
+, "manuscript-settings-view.ts", "compile-settings-modal.ts.old"  ]
 }
